// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/select-button/SelectButton should not show error tooltip on button by default 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isShown={false}
  position="middle-right"
  theme="error"
>
  <button
    className="select-button bdl-SelectButton"
    disabled={false}
    type="button"
  >
    Button Text
  </button>
</Tooltip>
`;

exports[`components/select-button/SelectButton should show error tooltip on button when error is has some value 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  isShown={true}
  position="middle-right"
  text="error"
  theme="error"
>
  <button
    className="select-button bdl-SelectButton is-invalid"
    disabled={false}
    type="button"
  >
    Button Text
  </button>
</Tooltip>
`;
